# rag_dev

./: .dockerignore  .env.example  .env.production  .env.staging  .gitignore  CLAUDE.md  README.md  celery_app.py  docker-compose.yml  gunicorn.config.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  run.py  run.toml  vite.config.ts
alembic/: env.py  script.py.mako
api/dependencies/: services.py
api/middleware/: cors.py  logging.py  rate_limiter.py
api/routers/: rag.py
config/: flower_config.py  logging.py  settings.py
core/: auth.py  embedding.py  llm.py  minio.py  security.py  vision.py
core/parser/: base.py  factory.py  md_parser.py  mineru_parser.py  txt_parser.py
core/splitter/: base.py  chunker.py  text_splitter.py
database/: session.py
docker/pgsql/: Dockerfile  init.sql
models/: __init__.py  base.py  knowledgebase.py  parse_log.py  rag.py  user.py
routers/: chat.py  knowledgebase.py  messages.py  parse_log.py  rag.py  user.py
schemas/: chat.py  knowledgebase.py  messages.py  parse_log.py  rag.py  response.py  user.py
services/: chat.py  file.py  image_processor.py  knowledgebase.py  messages.py  parse_log.py  rag.py  user.py  vectorizer.py
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  vite-env.d.ts
src/api/: auth.ts  chat.ts  index.ts  knowledge.ts  request.ts  system.ts
tasks/: __init__.py  document.py
tests/: test_chunker.py  test_chunker_real.py  test_huggingface.py  test_mineru_api.py  test_mineru_paraser.py
utils/: cost_calculator.py  pagination.py  rate_limit.py  rate_limiter.py
(+29 files in other folders)
