[project]
name = "ai-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt<5",
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "fastapi-pagination>=0.15.15",
    "flower>=2.0.1",
    "ftfy>=6.3.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "minio>=7.2.20",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "pgvector>=0.5.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pyclipper>=1.4.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.13.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]

